--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am a MOM. Master of Multi-Tasking and a Limo Company Owner.</p>
+      <h1>Where I'm From...</h1>
+      <p>Born in Portland OR</p>
+      <h1>What are your favorite hobbies? </h1>
+      <p>My hobbies are reading, watching anime, and collecting thimbles.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
-    </section>
+      <p>My dream job is to be self employed or a contractor while being able to create fun and wonderful things.</p>
+      <h1>Where do you live? </h1>
+      <p>I live in a green with black trim house in Denver CO.</p>
+      <h1>Why do you want to be a web Developer?</h1>
+      <p>Being a web developer will help me develop better websites and better presence online for my business or any other business I would like to start. 
+        </section>
 
     <footer id="footer">
         <ul class="social">
